adapted the site to tablet and mobile

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             <div class="avatar"><img src="assets/unsplash_FfBFrtfpUnM.jpg" alt=""></div>
             <div class="bio">
                 <h2>About Jacob</h2>
-                <h3>Documentary Filmmaker 🎥</h3>
+                <h3>Documentary Filmmaker</h3>
                 <p>Welcome to my little corner of the web! I love capturing the subtle beauty of the everyday routine of life and I hope you love it too.</p>
                 <a href="projects.html"><button>See All of My Films</button></a>
             </div><!--End About Text-->
         </section><!--End About Section-->
+        <div class="divider"></div>
         <section id="projects">
             <div class="project">
                 <img src="assets/Projects/project-1.jpg" alt="">
@@ -80,7 +81,7 @@
             <h3>Want to work together?</h3>
             <a href="contact.html"><button>Drop Me a Line</button></a>
         </div><!--End Container-->
-        <a href="https://twitter.com/jolibois_" target="_blank">...or follow me on Twitter!</a>
+        <a href="https://twitter.com/jolibois_" target="_blank"><img src="assets/twitter.svg" alt=""></a>
         <p class="meta">© 2021 Jolibois Films LLC. All rights reserved.</p>
     </footer>
 </body>
