--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,7 @@
             <h3>Want to work together?</h3>
             <a href="contact.html"><button>Drop Me a Line</button></a>
         </div><!--End Container-->
-        <a href="https://twitter.com/jolibois_" target="_blank">...or follow me on Twitter!</a>
+        <a href="https://twitter.com/jolibois_" target="_blank"><img src="assets/twitter.svg" alt=""></a>
         <p class="meta">© 2021 Jolibois Films LLC. All rights reserved.</p>
     </footer>
 </body>
