adjusted design for iPhone and ultra-wide breakpoints

--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,12 @@
     </div><!--End Container-->
     <footer id="contact">
         <div class="container">
-            <h3>Check out My Latest Work</h3>
+            <h3>Check Out My Work</h3>
             <a href="projects.html"><button>See All Projects</button></a>
-        </div><!--End Container-->
-        <p class="meta">© 2021 Jolibois Films LLC. All rights reserved.</p>
+            <a href="https://twitter.com/jolibois_" target="_blank"><img class="twitter" src="assets/twitter.svg" alt="Twitter icon"></a>
+        </div>
+        <!--End Container-->
+        <p class="copyright">© 2021 Jolibois Films LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
