--- a/projects.html
+++ b/projects.html
@@ -102,9 +102,10 @@
         <div class="container">
             <h3>Want to work together?</h3>
             <a href="contact.html"><button>Drop Me a Line</button></a>
-        </div><!--End Container-->
-        <a href="https://twitter.com/jolibois_" target="_blank"><img src="assets/twitter.svg" alt=""></a>
-        <p class="meta">© 2021 Jolibois Films LLC. All rights reserved.</p>
+            <a href="https://twitter.com/jolibois_" target="_blank"><img class="twitter" src="assets/twitter.svg" alt="Twitter icon"></a>
+        </div>
+        <!--End Container-->
+        <p class="copyright">© 2021 Jolibois Films LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
