--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <div class="container">
             <h3>Want to work together?</h3>
             <a href="contact.html"><button>Drop Me a Line</button></a>
+            <a href="https://twitter.com/jolibois_" target="_blank"><img class="twitter" src="assets/twitter.svg" alt="Twitter icon"></a>
         </div><!--End Container-->
-        <a href="https://twitter.com/jolibois_" target="_blank"><img src="assets/twitter.svg" alt=""></a>
-        <p class="meta">© 2021 Jolibois Films LLC. All rights reserved.</p>
+        <p class="copyright">© 2021 Jolibois Films LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
