adjusted html and css for accessibility

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     </header>
     <div class="container">
         <section id="about">
-            <div class="avatar"><img src="assets/contact.jpg" alt=""></div>
+            <div class="avatar"><img src="assets/contact.jpg" alt="man behind cinema camera filming"></div>
             <div class="bio">
                 <h2>Want to work together?</h2>
                 <h3>Drop Me a Line 👇</h3>
