--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="container">
         <section id="about">
-            <div class="avatar"><img src="assets/unsplash_FfBFrtfpUnM.jpg" alt=""></div>
+            <div class="avatar"><img src="assets/unsplash_FfBFrtfpUnM.jpg" alt="man behind a cinema camera filming the sunset"></div>
             <div class="bio">
                 <h2>About Jacob</h2>
                 <h3>Documentary Filmmaker</h3>
@@ -35,42 +35,42 @@
         <div class="divider"></div>
         <section id="projects">
             <div class="project">
-                <img src="assets/Projects/project-1.jpg" alt="">
+                <img src="assets/Projects/project-1.jpg" alt="bus with headlights on in thick fog">
                 <p>Midnight Train</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-2.jpg" alt="">
+                <img src="assets/Projects/project-2.jpg" alt="four boys on the beach at sunset">
                 <p>Sunset Beach</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-3.jpg" alt="">
+                <img src="assets/Projects/project-3.jpg" alt="man in the window of a commuter bus at night">
                 <p>The Commute</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-4.jpg" alt="">
+                <img src="assets/Projects/project-4.jpg" alt="tunnel of glass in an acquarium">
                 <p>Acquarium Hotel</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-5.jpg" alt="">
+                <img src="assets/Projects/project-5.jpg" alt="man walking along the lakeshore in the fog at dusk">
                 <p>Morning Fog</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-6.jpg" alt="">
+                <img src="assets/Projects/project-6.jpg" alt="woman sitting in her living room watching TV">
                 <p>Gena</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-7.jpg" alt="">
+                <img src="assets/Projects/project-7.jpg" alt="country road in the fog at dusk">
                 <p>The Long Road Home</p>
             </div>
             <!--End Project-->
             <div class="project">
-                <img src="assets/Projects/project-8.jpg" alt="">
+                <img src="assets/Projects/project-8.jpg" alt="landscape view of mountains">
                 <p>Backpacks and Sunsets</p>
             </div>
             <!--End Project-->
