adjusted header and nav styles for ultra-wide breakpoints

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="container">
         <section id="about">
-            <div class="avatar"><img src="assets/unsplash_FfBFrtfpUnM.jpg" alt="man behind a cinema camera filming the sunset"></div>
+            <div class="avatar"><img src="assets/hero.jpg" alt="man behind a cinema camera filming the sunset"></div>
             <div class="bio">
                 <h2>About Jacob</h2>
                 <h3>Documentary Filmmaker</h3>
